<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/item_nombre"
                android:text="@string/item_nombre"
                android:textColor="@color/siu"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Actualizar nota-->
            <ImageView
                android:id="@+id/ivActualizar"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_editar"
                android:layout_marginEnd="40dp"
                android:layout_width="25dp"
                android:layout_height="25dp"/>

            <!--Eliminar nota-->
            <ImageView
                android:id="@+id/ivEliminar"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_eliminar"
                android:layout_width="25dp"
                android:layout_height="25dp"/>


        </RelativeLayout>

        <TextView
            android:id="@+id/item_autor"
            android:text="@string/item_autor"
            android:maxLines="3"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/item_paginas"
            android:text="@string/item_paginas"
            android:maxLines="3"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>